chore: cleanup code
- flyway파일은 건들이지 말자.